sgd/reproduction/playground/objects/SVMXC__Service_Group__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Group enables definition of your entire service organization. Service group definition includes details of group members, products in which the group specializes in, the skills available in the group, typical service delivery costs as well as geographies covered by the group. Service orders are assigned to a service group and optionally to group members. At the time of assignment, all the above parameters can be considered by the support center engineer(s) to choose the most suitable group that can address the customer problem.</description>
    <fields>
        <fullName>SMAX_PS_DisplayName__c</fullName>
        <label>帳票表示名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fax__c</fullName>
        <label>FAX番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the service team&apos;s address</description>
        <inlineHelpText>“City” part of the service team&apos;s address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the Service Team&apos;s address</description>
        <inlineHelpText>“Country” part of the Service Team&apos;s address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Additional information about the service group</description>
        <inlineHelpText>Additional information about the service group</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Email__c</fullName>
        <description>Email address for the service team</description>
        <inlineHelpText>Email address for the service team</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Code__c</fullName>
        <description>Any internal (typically financials) code your organization uses to refer to this group</description>
        <inlineHelpText>Any internal code your organization uses to refer to this group</inlineHelpText>
        <label>Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Type__c</fullName>
        <description>Indicates if this is a group Internal to your organization, a Partner company providing the services on your behalf, or a combination of Both.</description>
        <inlineHelpText>Indicates if this is a group Internal to your organization, a Partner company providing the services on your behalf, or a combination of Both.</inlineHelpText>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement</description>
        <inlineHelpText>East west geographic coordinate measurement</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_Connection_Name__c</fullName>
        <description>This field stores the Connection Instance Name.</description>
        <label>Optimizer Connection Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Phone__c</fullName>
        <description>Telephone Number of the service team</description>
        <inlineHelpText>Telephone Number of the service team</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State&apos; part of the service team&apos;s address</description>
        <inlineHelpText>“State&apos; part of the service team&apos;s address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the service team&apos;s address</description>
        <inlineHelpText>“Street” part of the service team&apos;s address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip&apos; part of the service team&apos;s address</description>
        <inlineHelpText>“Zip&apos; part of the service team&apos;s address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Team</label>
    <listViews>
        <fullName>SVMXC__All_Service_Teams</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Phone__c</columns>
        <columns>SMAX_PS_Fax__c</columns>
        <columns>SVMXC__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Service Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Teams</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Equipment</fullName>
        <active>true</active>
        <label>Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Technician</fullName>
        <active>true</active>
        <label>Technician</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>